Worked on updating all pages, json, and add ranks

--- a/khyeras/_dev/styles/khyeras_light_v1/theme/sass/expanded/speech.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/sass/expanded/speech.scss
@@ -4,6 +4,10 @@
 	Style name: Khy'eras (version 1.0)
 ------------------------------------------------------------------*/
 
+.bbcode-character-speech[data-name='Aldri Yosbin'] {
+	color: #6b8dc4;
+}
+
 .bbcode-character-speech[data-name='Aleida Farlight'] {
 	color: #33b873;
 }
@@ -246,6 +250,18 @@
 
 .bbcode-character-speech[data-name='Vanessa LaNore'] {
 	color: #8040ff;
+}
+
+.bbcode-character-speech[data-name='Velnise'] {
+	color: #93b726;
+}
+
+.bbcode-character-speech[data-name='Verial'] {
+	color: #999999;
+}
+
+.bbcode-character-speech[data-name='Wish Star'] {
+	color: #55a3d6;
 }
 
 .bbcode-character-speech[data-name='Yonatan Razel'] {
