--- a/khyeras/styles/khyeras_light_v1/theme/speech.css
+++ b/khyeras/styles/khyeras_light_v1/theme/speech.css
@@ -79,6 +79,10 @@
   color: #00bf80;
 }
 
+.bbcode-character-speech[data-name='Daniela'] {
+  color: #d4734a;
+}
+
 .bbcode-character-speech[data-name='Dash ODell'] {
   color: #008040;
 }
