--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/expanded/speech.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/expanded/speech.scss
@@ -80,6 +80,10 @@
 	color: #00bf80;
 }
 
+.bbcode-character-speech[data-name='Daniela'] {
+	color: #d4734a;
+}
+
 .bbcode-character-speech[data-name='Dash ODell'] {
 	color: #008040;
 }
