--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_header.scss
@@ -9,7 +9,7 @@
 ============================================== */
 
 .headerbar {
-	background: url($images + 'header.jpg') center bottom no-repeat;
+	background: $color-02 url($images + 'header.jpg') center bottom no-repeat;
 	background-size: cover;
 	height: 500px;
 	overflow: hidden;
