--- a/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/sass/imports/_footer.scss
@@ -2,7 +2,7 @@
 ============================================== */
 
 #page-footer {
-	background: $color-01 url($images + 'footer-background.png') center -30px repeat-x;
+	background: url($images + 'footer-background.png') center -30px repeat-x;
 	margin: 70px 0 0 0;
 	padding: 150px 0 0 0;
 	.footer-inner {
