--- a/khyeras/styles/khyeras_v1/template/partials/header_featured.html
+++ b/khyeras/styles/khyeras_v1/template/partials/header_featured.html
@@ -12,7 +12,7 @@
 						<a href="{{ ROOT_PATH }}{{ item.link }}">
 							<div class="featured-details">
 								<div class="image-wrap">
-									<img src="{{ ROOT_PATH }}images/content/misc/feature-{{ item_key }}.jpg" alt="{{ item.name }}" />
+									<img src="{{ ROOT_PATH }}{{ item.image }}" alt="{{ item.name }}" />
 								</div>
 								<p>{{ item.name }}</p>
 							</div>
